@@ -1,5 +1,5 @@
-AUX eapi2.patch 9597 RMD160 8d9a088b362aaedabadca0a7181071e72575a5d9 SHA1 9b9e67ccd6aaf91cde072f1bee47f89cb613ee33 SHA256 96afaf4906be052eb8e7817f0634a01023c8f4a46235d99b896844a5ffa48b1c
+AUX eapi2.patch 10131 RMD160 a4517879613342401de39d0500a0242575f70d4c SHA1 ff2db0e8b049836e314ad3b3317fceec9a84fa18 SHA256 123e59cad1a6ebf7fc6c4537eb2caebf1430dabe9e608a2d8789609e2f3f6802
 DIST getdelta-0.7.8.tar.bz2 10335 RMD160 fc06a4ceb1d56be76581d246ab1ea59c08f93d6f SHA1 5fca5b6a2bf1a396ae6b74afdf7145354802433d SHA256 72bd5dac59e86a5c78217a15e3198df513152dc784a8685b1a8c2c5efdb34217
-EBUILD getdelta-0.7.8-r3.ebuild 979 RMD160 b977a287e2381b321cbe7876ca549773b3d60730 SHA1 e3183dde630bd3702434a3260f18ec1890079fa3 SHA256 4f9d39214af5f5d90ba0916a12eebabd8ff97f372cc221ce660f29b6c273858b
-MISC ChangeLog 719 RMD160 15421b28ada5a2fd86911d25511014d5681077aa SHA1 9f2b922a722a0168d74e0a8ad3fbc7344f6c48e4 SHA256 b6f80e36a3aec9402304f221fe1963b8129e47f21930bf741fc103be51c9cf17
+EBUILD getdelta-0.7.8-r4.ebuild 979 RMD160 b977a287e2381b321cbe7876ca549773b3d60730 SHA1 e3183dde630bd3702434a3260f18ec1890079fa3 SHA256 4f9d39214af5f5d90ba0916a12eebabd8ff97f372cc221ce660f29b6c273858b
+MISC ChangeLog 888 RMD160 b42118db45920076898c2d788aaddbc7b450b96d SHA1 c69e7b3b90ae33ef21a625dd4f4cec635cf00d79 SHA256 cf5436be1d1b13deb223b2dc7b916e876d8083f7098e938cd9aa705a1ddb71c8
 MISC metadata.xml 388 RMD160 72d22ddce38d3b7c38380c9b0edae16c99974b76 SHA1 2f0107c483ea6272a3fe84b65de8fa46da8dd4c8 SHA256 497a451192be11a8a64d194e594daf90f7b2c59427654c78ed4c614cb442481f
