@@ -1,9 +1,12 @@
 --- getdelta.sh
 +++ getdelta.sh
-@@ -25,6 +25,11 @@
+@@ -25,6 +25,14 @@
  VERSION="0.7"
  
  # Changelog
++# version 0.7.11  2010/09/14
++#		- Support alternative location of make.global and
++#		  both locations of make.conf
 +# version 0.7.10  2010/08/27
 +#		- Use alternative to "deltup-queued" file
 +# version 0.7.9   2008/10/08
@@ -12,7 +15,7 @@
  # version 0.7.8   2007/07/13
  #		- added option -O to call of emerge when finding mirrors
  #		- replaced some calls of coreutils with bash-internals
-@@ -292,6 +297,12 @@
+@@ -292,6 +300,12 @@
  	echo $vser
  }
  
@@ -25,7 +28,7 @@
  
  # some colors for colored output
  output() {
-@@ -326,13 +337,13 @@
+@@ -326,13 +340,13 @@
  
  remove() {
  	output "${GREEN}You have chosen to remove ${CYAN}$1\n"
@@ -41,7 +44,7 @@
  	popd >/dev/null 2>&1
  }
  
-@@ -349,7 +360,7 @@
+@@ -349,7 +363,7 @@
  			-e "s/src4/srcDDD/g" \
  			-e "s/src5/srcEEE/g" \
  			-e "s/src6/srcFFF/g" \
@@ -50,7 +53,7 @@
  	fi
  	
  	# ignore PR for src-files of firefox
-@@ -375,7 +386,7 @@
+@@ -375,7 +389,7 @@
  		   -e "s/rc//g" \
  		   -e "s/[\._-]//g" \
  		   -e "s/\+//g" \
@@ -59,7 +62,7 @@
  }
  
  # create or update a config-file
-@@ -384,6 +395,7 @@
+@@ -384,6 +398,7 @@
  add_to_configfile LOCAL_MIRROR "" "set this to one or more (space separated) URI ending with '/' if you want to check one or more local mirror(s) first\n# most people just leave it empty."
  add_to_configfile DELTUP_SERVER "http://linux01.gwdg.de/~nlissne/deltup.php" "deltup-server to use"
  add_to_configfile FETCH "/usr/bin/wget -t 1 --passive-ftp" "command to use for downloading"
@@ -67,7 +70,7 @@
  add_to_configfile QUEUERETRY 15 "number of seconds to wait before a queued request is retried"
  add_to_configfile MAXIMUM_ACCEPTABLE_QUEUEPOS "15" "the maximum queuepos you would accept (if higher download full archive instead)"
  add_to_configfile QUEUETIMEOUT 900 "when a dtu-request is queued - how long should we wait max. before downloading the original archive instead (in seconds)"
-@@ -424,14 +436,14 @@
+@@ -424,21 +439,26 @@
  add_to_donotremove "^rp-pppoe"
  
  
@@ -84,7 +87,21 @@
  	echo -e "\n${YELLOW}There is a config-file ${CYAN}${GETDELTA_CONFIGFILE}${YELLOW} with some variables to control the behaviour of this script."
  	echo -e "Edit it to your needs.${NORMAL}"
  	exit 1
-@@ -464,9 +476,10 @@
+ fi 
+ # include variables from gentoo make.globals and make.conf
+-source /etc/make.globals
+-source /etc/make.conf
++if test -f /etc/make.globals
++then	source /etc/make.globals
++elif test -f /usr/share/portage/config/make.globals
++then	source /usr/share/portage/config/make.globals
++fi
++test -f /etc/make.conf && source /etc/make.conf
++test -f /etc/portage/make.conf && source /etc/portage/make.conf
+ 
+ 
+ if ${COLOR} 
+@@ -464,9 +484,10 @@
  	output "use getdelta.sh for your FETCHCOMMAND, only." &&
  	sleep 5 && exit 1
  
@@ -97,7 +114,7 @@
  
  # repoman downloads metadata.dtd with FETCHCOMMAND
  # this should not be done with getdelta - so just fetch the file and exit
-@@ -475,7 +488,7 @@
+@@ -475,7 +496,7 @@
  # dtu files.
  if [ "${NEW_FILE}" = "metadata.dtd" ] || [ "$GETDELTA" = "0" ]
  then
@@ -106,7 +123,7 @@
  	exit $?
  fi
  
-@@ -516,7 +529,7 @@
+@@ -516,7 +537,7 @@
  #
  output "${GREEN}Searching for a previously downloaded file in ${YELLOW}${DISTDIR}\n"
  
@@ -115,7 +132,7 @@
  length_first_chars=${#first_chars}
  [ $length_first_chars -lt 3 ] && first_chars="${NEW_FILE:0:2}"
  
-@@ -527,7 +540,7 @@
+@@ -527,7 +548,7 @@
  let len1=${#mask}
  filelist=""
  
@@ -124,7 +141,7 @@
  do
  	mask2=$(mask_name "${name}")
  	# add any file, that results in the same mask or differ not more than two letters
-@@ -582,7 +595,7 @@
+@@ -582,7 +603,7 @@
  
  	# find matching part of filename - first: frontmatch
  	x=0;
@@ -133,7 +150,7 @@
  	match=""
  	while [ -z "$match" ]
  	do
-@@ -657,7 +670,7 @@
+@@ -657,7 +678,7 @@
  	FILE_IS_CORRUPT=false
  	if $CHECK_OLD_FILE 
  	then
@@ -142,7 +159,7 @@
  		if [ "$file_digest" ]
  		then
  			file_md5=$(cut -d ' ' -f2 <<< "$file_digest") 
-@@ -669,7 +682,7 @@
+@@ -669,7 +690,7 @@
  				FILE_IS_CORRUPT=true
  			fi
  		else
@@ -151,7 +168,7 @@
  			then
  				output "${YELLOW}Could not find a digest-file for ${CYAN}${best_candidate}${YELLOW}. Testing file integrity with tar.\n"
  				if ! tar -tf ${best_candidate} >/dev/null
-@@ -698,17 +711,17 @@
+@@ -698,17 +719,17 @@
  
  		# Remember where we are, and go to a new dir there we can work
  		tmp_dwn_dest="${DISTDIR}/.getdelta-`date +%N`-tmp"
@@ -173,7 +190,7 @@
  		then
  			# thanks to deelkar for this much more elegant solution to the "broken pipe" problem with "head -n1"
  			GOTFILE=$(ls -c | sed -n 1p) 
-@@ -718,14 +731,14 @@
+@@ -718,14 +739,14 @@
  			# may have sento to us.
  			
  			# first: the request have been queued
@@ -192,7 +209,7 @@
  					rm -f deltup-queued
  					TSTAMP=$(date +%s)
  					if ((TSTAMP<QTMOUT)) && ((QUEUEPOS<=MAXIMUM_ACCEPTABLE_QUEUEPOS))
-@@ -741,7 +754,7 @@
+@@ -741,7 +762,7 @@
  							sleep 1
  						done
  						echo -n -e "${NORMAL}"
@@ -201,7 +218,7 @@
  						GOTFILE=$(ls -c | sed -n 1p)
  					else
  						if ((TSTAMP>=QTMOUT))
-@@ -761,20 +774,20 @@
+@@ -761,20 +782,20 @@
  				done
  			fi
  			
@@ -229,7 +246,7 @@
  					let savedsize=${newsize}-${downloadsize}
  					let percent=${savedsize}*100/${newsize}
  					unit="bytes"
-@@ -791,8 +804,8 @@
+@@ -791,8 +812,8 @@
  					esac
  					output "${YELLOW}This dtu-file saved ${UCOLOR}${savedsize} ${unit} (${percent}%)${YELLOW} download size.\n"
  				fi
@@ -240,7 +257,7 @@
  			fi
  
  		fi # if $FETCH "${DELTUP_SERVER}${query}"
-@@ -812,7 +825,7 @@
+@@ -812,7 +833,7 @@
  			read
  		fi
  		popd >/dev/null 2>&1
@@ -249,7 +266,7 @@
  		#stop respond to trap2
  		trap 2
  	fi # if ! FILE_IS_CORRUPT
-@@ -824,10 +837,10 @@
+@@ -824,10 +845,10 @@
  	
  # Ok, once we are here, we should have got the delta (and used it)
  # or we still have to download the full file
